--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && gh-pages -b master -d public -m 'GitHub Pages Auto Deploy' -u 'Adithya Krishna <23498248+adithyaakrishna@users.noreply.github.com>'"
   },
   "eslintConfig": {
     "extends": [
