--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,5 +3,5 @@ updates:
 - package-ecosystem: npm
   directory: "/"
   schedule:
-    interval: "weekly"
-  open-pull-requests-limit: 10
+    interval: 
+  open-pull-requests-limit: 0
