--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,5 @@
 # Copyright (c) 2022 Adithya Krishna
-# See LICENSE.md for license information.
+# See LICENSE for license information.
 
 name: Deploy React Flow Demo
 
